Fix whitespace

--- a/src/app/pages/account/account.component.scss
+++ b/src/app/pages/account/account.component.scss
@@ -11,7 +11,6 @@
 
 .rep-offline-banner {
     min-height: 64px;
-    white-space: pre-wrap !important;
     display: flex;
     justify-content: space-between;
     height: unset;
@@ -19,7 +18,7 @@
     div {
         margin: 0;
         line-height: 22px;
-        white-space: pre-wrap !important;
+        white-space: normal!important;
     }
 }
 
